# fraud-detect-env

./: .gitignore  Dockerfile  README.md  __init__.py  environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rewards_logger.py  transactions.json
fraud_detect_env/server/: app.py
server/: app.py  transactions.json
server/templates/: index.html
