[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detect-env"
version = "1.0.0"
description = "Bank Fraud Detection Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core",
    "openai",
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "huggingface_hub",
    "tabulate",
    "requests"
]
authors = [
  { name="Meta Hackathon Team" }
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
